MAPRHADOOP-398: Updated MR configuration for TestJobConf